bppackaging/src/objects/HomeSearch_Grid_Column__mdt.object
<CustomObject>
    <fields>
        <fullName>Display_Object_Name__c</fullName>
        <label>Display Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HomeSearch Grid Column</label>
    <pluralLabel>HomeSearch Grid Columns</pluralLabel>
</CustomObject>